<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_purple"
    tools:context=".Level01">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="669dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/levelOne"
                android:layout_width="78dp"
                android:layout_height="59dp"
                android:background="@android:color/holo_purple"
                app:srcCompat="@mipmap/ic_launcher_round"
                tools:layout_editor_absoluteX="27dp"
                tools:layout_editor_absoluteY="68dp" />

            <ImageButton
                android:id="@+id/levelTwo"
                android:layout_width="78dp"
                android:layout_height="59dp"
                android:background="@android:color/holo_purple"
                app:srcCompat="@mipmap/ic_launcher_round"
                tools:layout_editor_absoluteX="27dp"
                tools:layout_editor_absoluteY="68dp" />

            <ImageButton
                android:id="@+id/levelThree"
                android:layout_width="78dp"
                android:layout_height="59dp"
                android:background="@android:color/holo_purple"
                app:srcCompat="@mipmap/ic_launcher_round"
                tools:layout_editor_absoluteX="183dp"
                tools:layout_editor_absoluteY="65dp" />

            <ImageButton
                android:id="@+id/levelFour"
                android:layout_width="78dp"
                android:layout_height="59dp"
                android:background="@android:color/holo_purple"
                app:srcCompat="@mipmap/ic_launcher_round"
                tools:layout_editor_absoluteX="261dp"
                tools:layout_editor_absoluteY="65dp" />

            <ImageButton
                android:id="@+id/levelFive"
                android:layout_width="78dp"
                android:layout_height="59dp"
                android:background="@android:color/holo_purple"
                app:srcCompat="@mipmap/ic_launcher_round"
                tools:layout_editor_absoluteX="105dp"
                tools:layout_editor_absoluteY="65dp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_one"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_two"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_three"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_four"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_five"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

</android.support.constraint.ConstraintLayout>